--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "description": "Hide the YouTube comments section on any YouTube video",
 
   "icons": {
-    "150": "no-comments.png"
+    "150": "images/no-comments.png"
   },
   "content_scripts": [
     {
